--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body {
 }
 
 header {
-    background-color: #d3d1d1;
+    background-color: #333;
     color: #fff;
     padding: 10px 20px;
     display: flex;
@@ -314,7 +314,7 @@ header .logo {
 }
 
 header .navigation a {
-    color: #2e0699;
+    color: #eeeef3;
     text-decoration: none;
     margin: 0 15px;
     font-size: 16px;
@@ -396,7 +396,7 @@ header .navigation a:hover {
 }
 
 .footer {
-    background-color: #d3d1d1;
+    background-color: #333;
     color: #fff;
     text-align: center;
     padding: 20px;
